array.island.Island.scala.error
Compilation error:
Island:6: error: not found: type i
    if (num[i] <= nump){n = n+1}
            ^Island:6: error: value num of type Array[Int] does not take type parameters.
    if (num[i] <= nump){n = n+1}
           ^Island:5: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to num.length){
         ^